[tool.poetry]
name = "minimal-example"
version = "0.1.0"
description = ""
authors = ["Andreas Zweili <zweili@contria.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"

[tool.poetry.group.dev.dependencies]
pylsp-mypy = "^0.6.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
ignore_missing_imports = true